--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ warp = "0.3"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.11", features = ["json"] }
+hashring = "0.3.0"
